# affine-opeg

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 20260512_0001_initial_schema.py  20260520_0002_sampling_progress_attempts_published.py  20260520_0003_sampling_progress_promoted.py
scripts/: bootstrap_phybench.py  bootstrap_verifiers_gsm8k.py  bootstrap_verifiers_quality.py  reweight_pool.py  smoke_pi_pipeline.py  smoke_pi_rollout.py
src/affine_opeg/: __init__.py  main.py
src/affine_opeg/adapters/: verifiers_runtime.py
src/affine_opeg/adapters/blob_stores/: s3.py
src/affine_opeg/adapters/envs/: registry.py  swe_rebench.py
src/affine_opeg/adapters/envs_builtin/: VENDOR_NOTICE.md  __init__.py  phybench_eed.py  phybench_extended_zss.py  phybench_latex_pre_process.py
src/affine_opeg/adapters/metadata_stores/sqlalchemy_pg/: __init__.py  mappers.py  orm.py  repositories.py  store.py
src/affine_opeg/adapters/normalizers/: affent.py  claude.py  registry.py  verifiers.py
src/affine_opeg/adapters/sandboxes/: affent_loop.py  docker_sandbox.py  null_sandbox.py  verifiers_loop.py
src/affine_opeg/adapters/task_sources/: jsonl.py  registry.py  swe_rebench.py  verifiers.py
src/affine_opeg/adapters/teachers/: base.py  openai_compat.py  registry.py
src/affine_opeg/application/: advantage.py  bootstrap.py  cell_scheduler.py  generate_rollouts.py  producer_loop.py
src/affine_opeg/domain/: models.py
src/affine_opeg/domain/ports/: __init__.py  blob_store.py  env.py  forward_engine.py  metadata_store.py  normalizer.py  pair_strategy.py  sandbox.py  scoring.py  task_source.py  teacher.py
src/affine_opeg/infrastructure/: audit.py  config.py  db.py  event_sink.py  logging.py  metrics.py
src/affine_opeg/ops/: __init__.py  docker_janitor.py
src/affine_opeg/publishing/: __init__.py  main.py  promoter.py  publisher.py  reweighter.py
src/affine_opeg/workers/: __init__.py  heartbeat.py  rollout_producer.py
tests/: test_cell_scheduler.py  test_docker_sandbox_exec.py
